# louder-bot

./: .gitignore  .replit  README.md  analyze_login.py  analyze_site.py  cli.py  cloud_storage.py  email_client.py  main.py  makefile  prompt_bank.txt  prompt_generator.py  prompt_templates.py  pyproject.toml  replit.nix  requirements.txt
.upm/: store.json
analysis/: site_analysis.json  suno_site_analysis.json  udio_site_analysis.json
logs/: click_failure_Sign in button_page_source.html  login_failure_1_page_source.html  login_failure_2_page_source.html
templates/: example_template.json
